// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReferAFriendForm /> <ConnectedReferAFriendForm /> should render and match the snapshot 1`] = `
<div>
  <form>
    <div
      class="refer-a-friend__StyledEmailText-sc-16r8705-0 hDQkIh"
    >
      <span>
        Enter email address
      </span>
    </div>
    <div
      class="refer-a-friend__StyledInputBox-sc-16r8705-1 Qzlag"
    >
      <input
        class="input__StyledInput-sc-10zxn30-0 lkoULL"
        id="email"
        name="email"
        value=""
      />
      <button
        class="button__StyledButton-sc-1bg6su4-0 hygGZF"
        type="submit"
      >
        <span>
          Send
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`<ReferAFriendForm /> mapStateToProps referral error 1`] = `
Object {
  "referralErrorMsg": undefined,
  "referralFailed": false,
  "referralIsPending": false,
  "referralSucceeded": true,
}
`;

exports[`<ReferAFriendForm /> mapStateToProps referral pending 1`] = `
Object {
  "referralErrorMsg": undefined,
  "referralFailed": false,
  "referralIsPending": true,
  "referralSucceeded": false,
}
`;

exports[`<ReferAFriendForm /> mapStateToProps referral success 1`] = `
Object {
  "referralErrorMsg": "Error occured",
  "referralFailed": true,
  "referralIsPending": false,
  "referralSucceeded": false,
}
`;
